fix(tf): scope search suggestions and cache to account
